@@ -35,12 +35,12 @@ use warnings;
 
 use base qw(Exporter DynaLoader);
 
-# This version should be increased on any code change to this module.  Always
-# use two digits for the minor version with a leading zero if necessary so
-# that it will sort properly.
 our $VERSION;
+
+# This version matches the version of WebAuth with which this module was
+# released, but with two digits for the minor and patch versions.
 BEGIN {
-    $VERSION = '3.07';
+    $VERSION = '4.0504';
 }
 
 our (@EXPORT, @EXPORT_OK, %EXPORT_TAGS);
