@@ -6,7 +6,7 @@
 # class.
 #
 # Written by Russ Allbery <rra@stanford.edu>
-# Copyright 2012
+# Copyright 2012, 2013
 #     The Board of Trustees of the Leland Stanford Junior University
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -36,10 +36,13 @@ use warnings;
 use Carp qw(croak);
 use WebAuth 3.06;
 
-# This version should be increased on any code change to this module.  Always
-# use two digits for the minor version with a leading zero if necessary so
-# that it will sort properly.
-our $VERSION = '1.01';
+our $VERSION;
+
+# This version matches the version of WebAuth with which this module was
+# released, but with two digits for the minor and patch versions.
+BEGIN {
+    $VERSION = '4.0504';
+}
 
 # Constructor.  Requires a WebAuth context and optionally can take an encoded
 # token and keyring to create a new object via decoding.
