@@ -1,7 +1,7 @@
 # Exception class for WebKDC call failures.
 #
 # Written by Roland Schemers
-# Copyright 2002, 2003, 2005, 2006, 2008, 2009, 2011, 2012
+# Copyright 2002, 2003, 2005, 2006, 2008, 2009, 2011, 2012, 2013
 #     The Board of Trustees of the Leland Stanford Junior University
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -32,12 +32,12 @@ use warnings;
 use base qw(Exporter);
 use overload '""' => \&to_string;
 
-# This version should be increased on any code change to this module.  Always
-# use two digits for the minor version with a leading zero if necessary so
-# that it will sort properly.
 our $VERSION;
+
+# This version matches the version of WebAuth with which this module was
+# released, but with two digits for the minor and patch versions.
 BEGIN {
-    $VERSION = '1.05';
+    $VERSION = '4.0504';
 }
 
 # Export the error codes.  This list MUST be kept in sync and follow the same
