@@ -1,7 +1,7 @@
 # An object encapsulating a response from a WebKDC.
 #
 # Written by Roland Schemers
-# Copyright 2002, 2003, 2009, 2012
+# Copyright 2002, 2003, 2009, 2012, 2013
 #     The Board of Trustees of the Leland Stanford Junior University
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -27,12 +27,12 @@ package WebKDC::WebResponse;
 use strict;
 use warnings;
 
-# This version should be increased on any code change to this module.  Always
-# use two digits for the minor version with a leading zero if necessary so
-# that it will sort properly.
 our $VERSION;
+
+# This version matches the version of WebAuth with which this module was
+# released, but with two digits for the minor and patch versions.
 BEGIN {
-    $VERSION = '1.03';
+    $VERSION = '4.0504';
 }
 
 # Create a new, empty request.
